--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -24,13 +24,13 @@
 .table td.details {
   padding: 0px;
   height: 0px;
-  border-bottom: none;
+  box-shadow: none;
 }
 
 .table td.active {
   padding: 0px;
   height: auto;
-  border-bottom: solid 1px $D70;
+  box-shadow: inset 0 -1px 0 0 $D70;
 }
 
 .table td.important {
@@ -53,24 +53,23 @@
 }
 
 .row-details:not(:last-child) {
-  border-bottom: 1px solid $D70;
+  box-shadow: inset 0 -1px 0 0 $D70;
 
   .row-details-inner {
-    border-top: 1px solid $D70;
+    box-shadow: inset 0 -1px 0 0 $D70;
   }
-
 }
 
 .animatedDataRow {
   td {
-    border-bottom: none medium;
+    box-shadow: none;
   }
 
   cursor: pointer;
 
   &:nth-last-child(2) {
     td {
-      border-bottom: 1px solid $D70;
+      border-top: 1px solid $D70;
     }
   }
 }
