--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -17,7 +17,7 @@
     color: $B10;
     font-size: 18px;
     padding-left: 6px;
-    transform: translateY(4px);
+    transform: translateY(5px);
   }
 }
 
@@ -81,4 +81,8 @@
       border-bottom: 1px solid $D70;
     }
   }
+}
+
+.inline{
+  display: inline-block;
 }
