--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -9,6 +9,8 @@
 
 .table th {
   background-color: $B40;
+  padding: 12px 0 12px 24px;
+  height: 18px;
   text-align: left;
   text-align: start; // not supported in IE11 & Edge; 'left' as fallback
   font-weight: normal;
@@ -16,7 +18,7 @@
 }
 
 .table td {
-  padding: 18px 12px;
+  padding:  18px 0 18px 24px;
   font-weight: normal;
   box-shadow: inset 0 -1px 0 0 $D60;
 }
@@ -72,4 +74,14 @@
       box-shadow: inset 0 1px 0 0 $D70;
     }
   }
+}
+
+.largeVerticalPadding {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.mediumVerticalPadding {
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
