--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -21,6 +21,18 @@
   padding:  18px 0 18px 24px;
   font-weight: normal;
   box-shadow: inset 0 -1px 0 0 $D60;
+
+
+  &.largeVerticalPadding {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+
+  &.mediumVerticalPadding {
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
+
 }
 
 .table td.details {
@@ -74,14 +86,4 @@
       box-shadow: inset 0 1px 0 0 $D70;
     }
   }
-}
-
-.largeVerticalPadding {
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.mediumVerticalPadding {
-  padding-top: 18px;
-  padding-bottom: 18px;
 }
