--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -15,6 +15,13 @@
   text-align: start; // not supported in IE11 & Edge; 'left' as fallback
   font-weight: normal;
   box-shadow: inset 0 1px 0 0 $B30, inset 0 -1px 0 0 $B30;
+
+  &:first-child{
+    padding: 12px 0 12px 30px;
+  }
+  &:last-child{
+    padding: 12px 30px 12px 0;
+  }
 }
 
 .table td {
@@ -22,6 +29,13 @@
   font-weight: normal;
   box-shadow: inset 0 -1px 0 0 $D60;
 
+  &:first-child{
+    padding:  18px 0 18px 30px;
+  }
+
+  &:last-child{
+    padding: 18px 30px 18px 0;
+  }
 
   &.largeVerticalPadding {
     padding-top: 24px;
