--- a/src/Composite/RangeInputWithLabelComposite/RangeInputWithLabelComposite.scss
+++ b/src/Composite/RangeInputWithLabelComposite/RangeInputWithLabelComposite.scss
@@ -6,6 +6,31 @@
 
 .inputs{
   display: flex;
+
+  &.hasFocusFirst {
+    .firstinput,.firstDate {
+      z-index: 1;
+      border-right-width: 1px;
+    }
+    .lastinput,.lastDate {
+      border-left-width: 0;
+    }
+  }
+
+  &.hasFocusLast {
+    .lastinput,.lastDate {
+      z-index: 1;
+      border-left-width: 1px;
+    }
+    .firstinput,.firstDate {
+      border-right-width: 0;
+    }
+  }
+
+  &:not(.hasFocusLast)
+    .lastinput,.lastDate {
+    border-left-width: 0;
+  }
 }
 
 .firstinput, .lastinput {
